<!-- Copyright 2021 Nicholas Hochstetler
   ~ You may not use this file except in compliance with the Apache License
   ~ Version 2.0, obtainable at http://www.apache.org/licenses/LICENSE-2.0
   ~ or in the file LICENSE in the project's root directory. -->

<resources>
    <string name="app_name">BootyCrate</string>
    <string name="app_version">v1.1.0</string>
    <string name="inventory_navigation_item_name">Inventory</string>
    <string name="shopping_list_navigation_item_name">Shopping List</string>
    <string name="settings_description">BootyCrate settings</string>
    <string name="search_description">Search</string>
    <string name="back_description">Back</string>
    <string name="search_query_description">Search query</string>
    <string name="change_sorting_description">Change sorting</string>
    <string name="name_ascending_description">Name ascending</string>
    <string name="name_descending_description">Name descending</string>
    <string name="amount_ascending_description">Amount ascending</string>
    <string name="amount_descending_description">Amount descending</string>
    <string name="menu_button_description">Open options menu</string>

    <string name="checkout_button_background_path_data">M108,0 h-90 A 20.5 20.5 0 0 0 0,18 A 28 28 0 0 0 28,46 h90 A 32,32 0 0 1 108,0 Z</string>
    <string name="add_button_background_path_data">M 28,0 A 28,28 0 1 1 28,56 A 28,28 0 1 1 28,0</string>
    <string name="add_button_plus_path_data">M 28,19 L 28,37 M 19,28 L 37,28</string>

    <string name="add_button_description">Add new item</string>
    <string name="add_another_item_button_description">Add another</string>
    <string name="new_item_description">New item</string>
    <string name="delete_button_description">Delete selected items</string>
    <string name="delete_all_description">Delete all</string>
    <string name="delete_all_items_confirmation_message">
        This will delete all items in the %1$s. Are you sure?</string>
    <string name="empty_recycler_view_message">The %1$s is empty</string>
    <string name="edit_button_description">Edit item</string>
    <string name="delete_snackbar_text">%1$d item(s) deleted</string>
    <string name="delete_snackbar_undo_text">Undo</string>
    <string name="action_mode_title">%1$d item(s) selected</string>

    <string name="item_collection_name">items</string>
    <string name="name_description">Item name</string>
    <string name="extra_info_description">Item extra info</string>
    <string name="color_description">Color</string>
    <string name="edit_color_description">Edit color</string>
    <string name="integer_edit_decrease_button_description">Decrease amount</string>
    <string name="integer_edit_increase_button_description">Increase amount</string>
    <string name="integer_edit_value_description">Amount</string>
    <string name="link_status_description">Linked status</string>
    <string name="collapse_button_description">Collapse item extra details</string>

    <string name="shopping_list_item_collection_name">shopping list</string>
    <string name="add_to_shopping_list_description">Add to shopping list</string>
    <string name="shopping_list_badge_text">+%1$d</string>
    <string name="checkout_description">Checkout</string>
    <string name="checkout_confirm_description">Confirm?</string>

    <string name="inventory_item_collection_name">inventory</string>
    <string name="add_to_inventory_description">Add to inventory</string>
    <string name="auto_add_to_shopping_list_checkbox_description">Auto add to shopping list</string>
    <string name="auto_add_to_shopping_list_checkbox_text">Add to shopping list under</string>
    <string name="auto_add_to_shopping_list_trigger_edit_description">Auto-add to shopping list amount threshold</string>

    <string name="item_extra_info_description">%1$s extra info</string>
    <string name="item_checkbox_description">%1$s checkbox</string>
    <string name="checkbox_unchecked_description">unchecked</string>
    <string name="checkbox_checked_description">checked</string>
    <string name="edit_item_color_description">Edit %1$s color,  button</string>
    <string name="item_amount_decrease_description">Decrease %1$s amount</string>
    <string name="item_amount_increase_description">Increase %1$s amount</string>
    <string name="item_amount_description">%1$s amount</string>
    <string name="item_is_linked_description">%1$s is linked</string>
    <string name="edit_item_description">Edit %1$s</string>
    <string name="collapse_item_description">Collapse %1$s</string>
    <string name="item_auto_add_to_shopping_list_checkbox_description">Auto-add %1$s to shopping list checkbox</string>
    <string name="item_auto_add_to_shopping_list_amount_decrease_description">Decrease %1$s auto-add to shopping list amount</string>
    <string name="item_auto_add_to_shopping_list_amount_increase_description">Increase %1$s auto-add to shopping list amount</string>
    <string name="item_auto_add_to_shopping_list_amount_description">%1$s auto-add to shopping list amount</string>

    <string name="share_description">Share</string>
    <string name="share_whole_list_title">Share %1$s</string>
    <string name="share_selected_items_title">Share selected %1$s items. </string>
    <string name="import_database_question_message">
        Would you like to merge the imported database with the existing one, or overwrite it?</string>
    <string name="import_database_question_merge_option">Merge</string>
    <string name="import_database_question_overwrite_option">Overwrite</string>
    <string name="import_database_overwrite_confirmation_message">
        Overwriting the existing database is irreversible. Are you sure?</string>
    <string name="exported_database_default_name">BootyCrateDatabase.sqlite</string>

    <string name="about_app_body">
        Copyright 2021 Nicholas Hochstetler. \nBootyCrate is an open-source shopping list and
        inventory management app, licensed under the terms of the Apache License, version 2.0.
        View the source code at: https://github.com/NicholasHochstetler/BootyCrate</string>
    <string name="new_shopping_list_item_duplicate_name_warning">Another item on the shopping list with the same name already exists.</string>
    <string name="new_inventory_item_duplicate_name_warning">Another item in the inventory with the same name already exists.</string>
    <string name="new_shopping_list_item_will_not_be_linked_warning">An item with the same name already
        exists in the inventory, but will not be linked to this item if it is added. If you want a linked
        item instead, select the item in the inventory and use \'%1$s\' from the options menu.</string>
    <string name="new_inventory_item_will_not_be_linked_warning">An item with the same name already
        exists on the shopping list, but will not be linked to this item if it is added. If you want a linked
        item instead, select the item on the shopping list and use \'%1$s\' from the options menu.</string>
    <string name="new_item_no_name_error">Item must have a name</string>
    <string name="select_all_description">Select all</string>
    <string name="check_all_description">Check all</string>
    <string name="uncheck_all_description">Uncheck all</string>
    <string name="no_search_results_message">No items match the query</string>

    <string name="update_list_notification_channel_id">update_list_reminder</string>
    <string name="update_list_notification_channel_name">Update list reminder</string>
    <string name="update_list_notification_channel_description">Reminders to update your shopping list / inventory.</string>

    <string name="update_list_reminder_description">Remind me to update my shopping list or inventory</string>
    <string name="repeat_description">Repeat</string>
    <string name="update_list_reminder_title">Reminder</string>
    <string name="update_list_reminder_message">Remember to update your shopping list / inventory.</string>
    <string name="pref_privacy_policy_key">privacy_policy</string>
    <string name="pref_privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_text">BootyCrate does not ask for, collect, or share any personal information. BootyCrate only stores user preferences and entered shopping list and inventory item data on the user\'s device, or in external files if the user chooses to export this data. This data is never uploaded to other computers or servers unless the user does this themselves with their exported data files.</string>
    <string name="invalid_imported_db_error_message">The imported database was invalid or empty. Reverting to previous database instead.</string>
    <string name="error">Error</string>

    <string name="color_picker_close_description">Close color picker</string>
    <string name="color_picker_option_description">%1$s option</string>
    <string name="item_color_0_description">red</string>
    <string name="item_color_1_description">orange</string>
    <string name="item_color_2_description">yellow</string>
    <string name="item_color_3_description">lime green</string>
    <string name="item_color_4_description">green</string>
    <string name="item_color_5_description">teal</string>
    <string name="item_color_6_description">cyan</string>
    <string name="item_color_7_description">blue</string>
    <string name="item_color_8_description">purple</string>
    <string name="item_color_9_description">magenta</string>
    <string name="item_color_10_description">pink</string>
    <string name="item_color_11_description">gray</string>

    <string name="add_inventory_description">Add new inventory</string>
    <string name="inventory_name_hint">Inventory name</string>
    <string name="rename_inventory_popup_title">Enter inventory name</string>
    <string name="more_options_description">More options</string>
    <string name="rename_description">Rename</string>
    <string name="delete_description">Delete</string>
    <string name="delete_inventory_confirmation_message">Deleting an inventory will delete all items in it and on its associated shopping list, and cannot be undone. Are you sure?</string>
    <string name="multi_select_inventories_description">Multi-select inventories</string>
    <string name="select_all_inventories_description">Select all inventories</string>
    <string name="multiple_selected_inventories_description">Multiple inventories</string>
    <string name="select_a_shopping_list_message">Pick a shopping list to add the item to:</string>
    <string name="select_an_inventory_message">Pick an inventory to add the item to:</string>
    <string name="new_shopping_list_item_has_no_inventory_id_error_message">The item must belong to a shopping list. Select one to add it to.</string>
    <string name="new_inventory_item_has_no_inventory_id_error_message">The item must belong to an inventory. Select one to add it to.</string>
    <string name="inventory_selector_options_description">Inventory selector options</string>
</resources>
