<!-- Copyright 2021 Nicholas Hochstetler
   ~ You may not use this file except in compliance with the Apache License
   ~ Version 2.0, obtainable at http://www.apache.org/licenses/LICENSE-2.0
   ~ or in the file LICENSE in the project's root directory. -->

<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="48dp"
    android:layout_width="wrap_content"
    tools:parentTag="LinearLayout">

    <ImageButton
        android:id="@+id/decreaseButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/integer_edit_decrease_button_description"
        style="@style/IntegerEditDecreaseButton" />

    <!-- The valueEdit's start and end margins are set to its width when displaying
         a single digit divided by -2. This will allow the decrease and increase
         buttons' hit rects to overlap it to save horizontal space since the value
         edit isn't touch focusable anyways. The value edit's minimum width when
         it is focusable should be set to 58dp so that it will still meet the 48dp
         min touch target size even with the increase and decrease buttons
         covering up 10dp total from its sides. -->
    <EditText
        android:id="@+id/valueEdit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:importantForAutofill="no"
        tools:ignore="LabelFor"
        tools:text="0"
        tools:textSize="22sp"
        android:layout_marginStart="-5dp"
        android:layout_marginEnd="-5dp"
        android:elevation="-1dp"
        android:contentDescription="@string/integer_edit_value_description"
        style="@style/IntegerEditValue" />

    <ImageButton
        android:id="@+id/increaseButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/integer_edit_increase_button_description"
        style="@style/IntegerEditIncreaseButton" />
</merge>
